yaml/istio/deployment-colors.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
  labels:
    app: blueorgreen-svc
    apptype: blue
    access: basic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blueorgreen-svc
      apptype: blue
  strategy: {}
  template:
    metadata:
      labels:
        app: blueorgreen-svc
        apptype: blue
        access: basic
    spec:
      containers:
      - image: ciberkleid/s1p-2020-mesh-blueorgreenservice
        name: app
        resources: {}
        imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green
  labels:
    app: blueorgreen-svc
    apptype: green
    access: basic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blueorgreen-svc
      apptype: green
  strategy: {}
  template:
    metadata:
      labels:
        app: blueorgreen-svc
        apptype: green
        access: basic
    spec:
      containers:
        - image: ciberkleid/s1p-2020-mesh-blueorgreenservice
          name: app
          resources: {}
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slowgreen
  labels:
    app: blueorgreen-svc
    apptype: slowgreen
    access: basic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blueorgreen-svc
      apptype: slowgreen
  strategy: {}
  template:
    metadata:
      labels:
        app: blueorgreen-svc
        apptype: slowgreen
        access: basic
    spec:
      containers:
        - image: ciberkleid/s1p-2020-mesh-blueorgreenservice
          name: app
          resources: {}
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yellow
  labels:
    app: blueorgreen-svc
    apptype: yellow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blueorgreen-svc
      apptype: yellow
  strategy: {}
  template:
    metadata:
      labels:
        app: blueorgreen-svc
        apptype: yellow
    spec:
      containers:
        - image: ciberkleid/s1p-2020-mesh-blueorgreenservice
          name: app
          resources: {}
          imagePullPolicy: Always
