yaml/istio/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blueorgreen
  name: blueorgreen
spec:
  ports:
  - name: 8080-8181-blueorgreen
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: blueorgreen
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
    apptype: blueorgreen-fe
  name: frontend
spec:
  ports:
    - name: 8080-9090-blueorgreen
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: frontend
  type: ClusterIP
status:
  loadBalancer: {}
