yaml/istio/blueorgreen-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: blueorgreen-fe
spec:
  hosts:
  - "blueorgreen.marygabry.name"
  gateways:
  - blueorgreen
  http:
  - name: blueorgreen-frontend
    match:
    - uri:
        prefix: /
    - uri:
        prefix: /js
    - uri:
        prefix: /color
    route:
    - destination:
        port:
          number: 8080
        host: frontend
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: blueorgreen-svc
spec:
  hosts:
  - "blueorgreen.marygabry.name"
  gateways:
  - blueorgreen
  http:
  - name: blueorgreen-premium
    match:
    - uri:
        prefix: /blueorgreen
      headers:
        cookie:
          exact: type=premium
    route:
    - destination:
        port:
          number: 8080
        host: blueorgreen
        subset: premium
  - name: blueorgreen-basic
    match:
      - uri:
          prefix: /blueorgreen
    route:
      - destination:
          port:
            number: 8080
          host: blueorgreen
          subset: basic
