yaml/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: blueorgreen-gw
spec:
  hosts:
  - "blueorgreen.marygabry.name"
  gateways:
  - springone-gw
  http:
  - name: blueorgreen-gw
    match:
    - uri:
        prefix: /login
    - uri:
        prefix: /logout
    route:
    - destination:
        port:
          number: 8080
        host: blueorgreen-gw
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: blueorgreen-fe
spec:
  hosts:
  - "blueorgreen.marygabry.name"
  gateways:
  - springone-gw
  http:
  - name: blueorgreen-fe
    timeout: 1200ms
    match:
    - uri:
        prefix: /
    - uri:
        prefix: /js
    - uri:
        prefix: /color
    route:
    - destination:
        port:
          number: 8080
        host: blueorgreen-fe
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: blueorgreen-svc
spec:
  hosts:
  - "blueorgreen.marygabry.name"
  gateways:
  - springone-gw
  http:
  - name: blueorgreen-svc-premium
    match:
      - uri:
          prefix: /blueorgreen
        headers:
          cookie:
            regex: "^(.*?;)?(type=premium)(;.*)?$"
    route:
      - destination:
          port:
            number: 8080
          host: blueorgreen-svc
          subset: premium
  - name: blueorgreen-svc-basic
    match:
    - uri:
        prefix: /blueorgreen
    route:
    - destination:
        port:
          number: 8080
        host: blueorgreen-svc
        subset: basic
    fault:
      delay:
        fixedDelay: 5000ms
        percentage:
          value: 30
